--- a/style.css
+++ b/style.css
@@ -1,10 +1,10 @@
 body {
-    background-color: lightgrey;
-    padding: 10px;
+    background-color: lightgray;
+    padding: 30px;
     font-family: Georgia, Serif;
 }
-.start {
-    width: 95%;
+div {
+    display: inline-block;
     background-color: rgb(190, 191, 192);
     margin: auto;
 }
@@ -17,10 +17,9 @@ main {
     padding: 10px;
     width: 55%;
     text-align: justify;
-    margin-left: auto;
 }
 aside {
-    float: right;
+    float: left;
     padding: 10px;
     width: 35%;
     text-align: left;
@@ -30,6 +29,13 @@ footer {
     width: 100%;
     margin-bottom: 20px;
     float: left;
+}
+.scr {
+    border: 2px solid black;
+    border-radius: 5%;
+    width: 110px;
+    float: right;
+    margin-top: 10px;
 }
 .left {
     text-align: left;
@@ -44,6 +50,7 @@ footer {
     padding-left: 10px;
     border: 2px solid blueviolet;
     padding: 10px;
+    max-width: 100px;
 }
 .other {
     font-style: italic;
